Fix feature images being cut off in firefox on medium screen sizes

--- a/dev/src/scss/features.scss
+++ b/dev/src/scss/features.scss
@@ -11,7 +11,6 @@
   position:relative;
   background-color: #000;
   overflow: hidden;
-  display: inline-block;
 }
 
 .lbb-feature:hover .lbb-feature-image {
